espresso (0.99.44) UNRELEASED; urgency=low

  * GTK frontend:
    - Say "Selected region" rather than "Selected country".
  * Depend on localechooser-data (>= 0.27ubuntu12) for a matching
    languagelist (closes: Malone #39043).
  * Silently skip languages rather than crashing if we can't find their
    language code.
  * Add ${shlibs:Depends} to espresso's and espresso-frontend-gtk's Depends
    (closes: Malone #39115).
  * Retranslate Cancel/Back/Forward buttons when changing language.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Apr 2006 00:52:02 +0100

espresso (0.99.43) dapper; urgency=low

  [ Colin Watson ]
  * Add /cdrom/casper/filesystem.squashfs to the list of filesystem images
    we try to mount if casper didn't do it for us.
  * Use choose-mirror and apt-setup to set up a standard
    /etc/apt/sources.list.
  * GTK frontend:
    - Display more human-readable names for cities.
    - Display the selected country (using the existing iso-codes
      translations, which I hope should avoid most of the thorny
      geopolitical issues).
    - Stop depending on firefox; we don't display HTML any more.

  [ Jonathan Riddell ]
  * Make usersetup.py frontend independent
  * KDE Frontend:
    - Add user information validation
    - Implement basics of timezone selection
    - Enable non-root user error on startup
    - Update mountpoints page
    - Use KDE button order
  * GTK Frontend:
    - Disable Forward button on user information page if not all
      fields are filled out

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 10 Apr 2006 17:52:28 +0100

espresso (0.99.42) dapper; urgency=low

  * Disable pkgstriptranslations while building nested packages. Requires
    pkgstriptranslations (>= 27) on the buildds.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  7 Apr 2006 10:24:13 +0100

espresso (0.99.41) dapper; urgency=low

  [ Colin Watson ]
  * Set debian-installer/country based on selected timezone.

  [ Jonathan Riddell ]
  * KDE Frontend: