@@ -2,6 +2,9 @@ espresso (0.99.44) UNRELEASED; urgency=low
 
   * GTK frontend:
     - Say "Selected region" rather than "Selected country".
+    - Set default hostname to <username>-desktop or <username>-laptop
+      depending on the result of laptop-detect, unless the hostname has been
+      edited by hand.
   * Depend on localechooser-data (>= 0.27ubuntu12) for a matching
     languagelist (closes: Malone #39043).
   * Silently skip languages rather than crashing if we can't find their
